--- a/MusicPlayer/packages.config
+++ b/MusicPlayer/packages.config
@@ -1,4 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="ManagedBass" version="3.0.0" targetFramework="net471" />
+  <package id="Microsoft.Extensions.Configuration" version="2.2.0" targetFramework="net471" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.2.0" targetFramework="net471" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="2.2.0" targetFramework="net471" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="2.2.0" targetFramework="net471" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.2.0" targetFramework="net471" />
+  <package id="Microsoft.Extensions.Http" version="2.2.0" targetFramework="net471" />
+  <package id="Microsoft.Extensions.Logging" version="2.2.0" targetFramework="net471" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.2.0" targetFramework="net471" />
+  <package id="Microsoft.Extensions.Options" version="2.2.0" targetFramework="net471" />
+  <package id="Microsoft.Extensions.Primitives" version="2.2.0" targetFramework="net471" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net471" />
+  <package id="SoundCloud.Api" version="3.0.0" targetFramework="net471" />
+  <package id="SpotifyAPI.Web" version="5.1.1" targetFramework="net471" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net471" />
+  <package id="System.ComponentModel.Annotations" version="4.5.0" targetFramework="net471" />
+  <package id="System.Memory" version="4.5.1" targetFramework="net471" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net471" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.1" targetFramework="net471" />
 </packages>
