--- a/MusicPlayer/packages.config
+++ b/MusicPlayer/packages.config
@@ -16,7 +16,14 @@
   <package id="SpotifyAPI.Web" version="5.1.1" targetFramework="net471" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net471" />
   <package id="System.ComponentModel.Annotations" version="4.5.0" targetFramework="net471" />
+  <package id="System.IO" version="4.3.0" targetFramework="net471" />
   <package id="System.Memory" version="4.5.1" targetFramework="net471" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net471" />
   <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net471" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="net471" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.1" targetFramework="net471" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net471" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net471" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net471" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net471" />
 </packages>
